@@ -11,6 +11,11 @@
 Development version 3.3.1, not released
 =======================================
 
+- Added optional support for the STRUMPACK parallel sparse direct solver and
+  preconditioner. STRUMPACK uses Hierarchically Semi-Separable (HSS) compression
+  in a fully algebraic manner, with interface similar to SuperLU_DIST. See
+  http://portal.nersc.gov/project/sparse/strumpack for more details.
+
 - Added a new macro, MFEM_VERSION, defined as a single integer of the form
   (major*100 + minor)*100 + patch. The new convention is that an even number
   (i.e. even patch number) denotes a "release" version, while an odd number
